--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -30,7 +30,7 @@
     {% endif %}
 
     {% if site.linkedin %}
-        <a class="link" data-title="linkedin.com/{{ site.linkedin }}" href="http://linkedin.com/{{ site.linkedin }}" target="_blank">
+        <a class="link" data-title="linkedin.com/in{{ site.linkedin }}" href="http://linkedin.com/{{ site.linkedin }}" target="_blank">
             <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
         </a>
     {% endif %}
