updating https url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,13 @@
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
         <a class="link" href="{{ site.url }}/about">
-            <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image == true %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+            <img class="selfie" alt="{{ site.name }}" src="
+                {% if site.external-image == true %}
+                    {{ site.picture }}
+                {% else %}
+                    {{ site.url }}/{{ site.picture }}
+                {% endif %}"
+            />
         </a>
 
         <h1 class="title">{{ site.name }}</h1>
