--- a/assets/styles/pages/_post.styl
+++ b/assets/styles/pages/_post.styl
@@ -39,3 +39,13 @@
 
         a
             text-decoration none
+    
+    > .title-image
+        max-height 120px
+        float left
+        margin -25px
+
+        +mobile()
+            float none
+            margin auto
+            display block
