--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: default
 ---
 {% include header.html %}
 
+{% if page.img %}
+<img class="title-image" src="{{ page.img }}" alt="{{ page.title }}">
+{% endif %}
 <h1 class="title">{{ page.title }}</h1>
 
 <span class="date">
