Corrected margin css in post styl sheet

--- a/assets/styles/pages/_post.styl
+++ b/assets/styles/pages/_post.styl
@@ -43,7 +43,7 @@
     > .title-image
         max-height 120px
         float left
-        margin -25px
+        margin-top -25px
 
         +mobile()
             float none
