--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -369,7 +369,7 @@ figure.highlight {
 }
 code,
 tt {
-  padding: 1px 3px;
+  padding: 1px 0;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 12px;
   line-height: 20px;
