--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1137,6 +1137,7 @@ pre {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
+  white-space: nowrap;
 }
 .social-links > .link:before {
   content: attr(data-title);
