Changed post img tag to image for SEO plugin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: default
 ---
 {% include header.html %}
 
-{% if page.img %}
-<img class="title-image" src="{{ page.img }}" alt="{{ page.title }}">
+{% if page.image %}
+<img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
 {% endif %}
 <h1 class="title">{{ page.title }}</h1>
 
