Shifted title image to centered above title text

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -598,15 +598,8 @@ pre {
 }
 .post > .title-image {
   max-height: 120px;
-  float: left;
-  margin-top: -25px;
-}
-@media only screen and (max-width: 400px) {
-  .post > .title-image {
-    float: none;
-    margin: auto;
-    display: block;
-  }
+  display: block;
+  margin: 0 auto;
 }
 .tags {
   margin-top: 125px;
