--- a/assets/styles/pages/_post.styl
+++ b/assets/styles/pages/_post.styl
@@ -39,13 +39,8 @@
 
         a
             text-decoration none
-    
+
     > .title-image
         max-height 120px
-        float left
-        margin-top -25px
-
-        +mobile()
-            float none
-            margin auto
-            display block
+        display block
+        margin 0 auto
