--- a/assets/styles/pages/_post.styl
+++ b/assets/styles/pages/_post.styl
@@ -39,3 +39,8 @@
 
         a
             text-decoration none
+
+    > .title-image
+        max-height 120px
+        display block
+        margin 0 auto
