--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -40,8 +40,8 @@ p
 	margin-bottom: 20px
 	letter-spacing: 0.4px
 
-	// @media #{$mobile}
-	// 	letter-spacing: 0.2px
+	@media #{$mobile}
+		letter-spacing: 0.2px
 
 strong
 	font-weight: 400
@@ -75,8 +75,8 @@ figcaption
 	color: $gama
 	font-weight: 300
 
-	// @media #{$mobile}
-	// 	font-size: 1.2rem
+	@media #{$mobile}
+		font-size: 1.2rem
 
 blockquote
 	padding-left: 15px
@@ -122,11 +122,11 @@ pre
 	width: 96%
 	margin: 0 auto
 
-	// @media #{$mobile}
-	// 	width: 88%
-	//
-	// @media #{$tablet}
-	// 	width: 88%
+	@media #{$mobile}
+		width: 88%
+
+	@media #{$tablet}
+		width: 88%
 
 .wrapper-normal
 	max-width: 560px
