more updates for sass version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ "/feed.xml" }}" />
 
-    <link rel="stylesheet" href="{{ site.url }}/assets/styles/styles.css">
+    <link rel="stylesheet" href="{{ site.url }}/assets/styles/style.css">
 </head>
 <body>
 
