--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,5 +1,5 @@
-$fontSans: "Helvetica Neue, Helvetica, Arial, sans-serif"
-$fontMonospace: "Consolas, Liberation Mono, Menlo, Courier, monospace"
+$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
+$fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
 $beta: #222
