--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
 
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
-        <a class="link" href="{{ site.url }}/about">
-            <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image == true %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+        <a class="link" {% if site.about %}href="{{ site.url }}/about"{% endif %}>
+            <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
         </a>
 
         <h1 class="title">{{ site.name }}</h1>
