Adds comment about using share links

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -8,6 +8,8 @@
         <p class="bio">{{ site.authors[page.author].bio }}</p>
 
         <div class="share">
+            <!-- Note: Only use three share links if your site width is set to large -->
+            <!-- If site width is set to normal, you may choose any two share links -->
             <a class="twitter" href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }} - {{ page.title }} by @{{ site.twitter }}">
                 <svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg><span class="icon-twitter">Tweet</span>
             </a>
