--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
 
-        var disqus_shortname = '{{ site.disqus }}';
+        var disqus_shortname = '{{ site.disqus.shortname }}';
         var disqus_developer = 0;
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
