--- a/_sass/components/others.sass
+++ b/_sass/components/others.sass
@@ -13,12 +13,13 @@
 
 .icon
     display: inline-block
-    width: 17px
-    height: 17px
+    width: 60px
+    height: 60px
     fill: #000
     text-align: center
     color: #000
     margin: 7px auto
+    vertical-align: middle
 
 .caption
     position: relative
