feat: css improvements
Thanks to @cbrueffer (https://github.com/cbrueffer/indigo/commit/ae9e47085ac1147924849a9cd4c547498174123f)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
 <footer class="footer-main">
-    {{ site.name }} © {{ site.time | date: '%Y' }} 
+    <span class="copyright">
+        {{ site.name }} © {{ site.time | date: '%Y' }}
+    </span>
+    
     <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
         {% fa_svg fas.fa-rss %}
     </a>
