feat: adds dark theme (#484)
* feat: adds dark theme

* chore: updates screen shot

* docs: updates

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -4,6 +4,7 @@ body, html
 body
 	font: 16px $fontSans
 	color: $alpha
+	background: $omega
 
 h1, h2, h3, h4
 	font-family: $fontSans
@@ -104,7 +105,7 @@ tt
 	font-family: $fontMonospace
 	font-size: 12px
 	line-height: 20px
-	background: #fff
+	background: $omega
 	border-radius: 2px
 
 pre
@@ -116,7 +117,7 @@ pre
 	font-size: 1.2rem
 	line-height: 2rem
 	overflow: auto
-	background: #fff
+	background: $omega
 	border: 1px solid $epsilon
 	border-radius: 2px
 
