--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@ layout: compress
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta name=author content="{{ site.title }}">
+    <meta http-equiv="cache-control" content="no-cache">
 
     {% seo %}
 
